--- a/01_company/styles.css
+++ b/01_company/styles.css
@@ -1,3 +1,60 @@
+
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
 body {
 	/*background: gray;*/
+	font: 12px/1.5 Arial, sans-serif;
+}
+
+.container {
+	width: 752px;
+	margin: 0 auto;
+}
+
+.center-image {
+	display: block;
+	margin: 25px auto 20px auto;
+}
+
+
+nav ul {
+	overflow: hidden;
+	font-size: 14px;
+	border-top: 1px solid #f3f3f3;
+	border-left: 1px solid #f3f3f3;
+	border-right: 1px solid #f3f3f3;
+	border-bottom: 3px solid #9dc5f0;
+	margin-bottom: 18px;
+}
+
+nav ul li {
+	float: left;
+	list-style: none;
+	padding: 8px 28px;
+	border-left: 1px solid #f3f3f3;
+}
+
+nav ul li a {
+	color: #5f5d67;
+	text-decoration: none;
+}
+
+article {
+	width: 476px;
+	float: left;
+	padding: 24px;
+}
+
+aside {
+	width: 264px;
+	float: right;
+	padding: 24px;
+}
+
+footer {
+	clear: both;
 }
