--- a/02_blog/styles.css
+++ b/02_blog/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .wrapper {
-	width: 960px;
+	max-width: 960px;
 	margin: 0 auto;
 }
 
@@ -14,16 +14,26 @@ body {
 	border-right: 1px solid #e1e0e0;
 }
 
+.clearfix:after {
+	content: '';
+	display: block;
+	clear: both;
+}
+
 header {
-	background-color: #292929;
 	margin-bottom: 80px;
+	background-color: #292929;
+	overflow: hidden;
 }
 
 .logo {
-	display: inline-block;
+	display: block;
 	margin: 50px 0;
+	float: left;
 }
-
+img {
+	max-width: 100%;
+}
 /* ----------------------------------------------------
  main menu
 ---------------------------------------------------- */
@@ -31,13 +41,19 @@ header {
 	float: right;
 }
 .main-menu a {
-	display: inline-block;
-	color: #ffffff;
-	font-weight: bold;
 	text-decoration: none;
+	font-weight: bold;
+	color: #ffffff;
+	display: block;
 	padding: 56px 30px;
 	border-left: 1px solid #1e1e1e;
 	border-bottom: 6px solid #1e1e1e;
+	float: left;
+}
+
+.main-menu a:hover {
+	text-decoration: underline;
+	color: #d7d7d7;
 }
 
 .main-menu .active {
@@ -48,7 +64,8 @@ header {
 /* ----------------------------------------------------
  main content
 ---------------------------------------------------- */
-.main-content {
+main {
+	clear: both;
 	width: 620px;
 	float: left;
 }
@@ -56,7 +73,7 @@ header {
 .article-content {
 	padding: 20px 0 80px 20px;
 }
-.main-article h2 {
+.article-content  h2 {
 	color: #4f4e4e;
 	font-size: 28px;
 	font-weight: bold;
@@ -65,7 +82,7 @@ header {
 	text-transform: uppercase;
 	margin-bottom: 50px;
 }
-.main-article p {
+.article-content  p {
 	color: #606060;
 	margin-bottom: 24px; 
 }
@@ -94,13 +111,13 @@ aside {
 	border-top: 1px solid #e1e0e0;
 }
 .articles-nav a {
-	display: inline-block;
+	text-transform: uppercase;
 	color: #818181;
 	font-size: 18px;
 	font-weight: bold;
 	letter-spacing: 2px;
-	text-transform: uppercase;
 	margin: 30px 0 38px 0;
+	display: inline-block;
 }
 .nav-prev {
 	float: left;
@@ -109,6 +126,54 @@ aside {
 	float: right;
 }
 
+/* -------------------------------------------------------*/
+.aside-sect h3 {
+	padding: 12px 0 18px 20px;
+	border-left: 3px solid #58c93a;
+
+	text-transform: uppercase;
+
+	background-color: #f8f8f8;
+}
+
+.input {
+	box-sizing: border-box;
+	padding: 16px 0 16px 16px;
+	width: 100%;
+
+	border-top: 1px solid #e1e0e0;
+	border-bottom: 1px solid #e1e0e0;
+	border-left: 1px solid #e1e0e0;
+	border-right: 0;
+}
+
+.input-search {
+	margin: 18px 0 60px 0;
+	font-size: 12px;
+	color: #b9b9b9;
+}
+
+.cat-list {
+	margin: 16px 0 68px 16px;
+
+	line-height: 1.5;
+}
+.cat-list a {
+	color: #339933;
+}
+
+.input-wrapper {
+	position: relative;
+}
+.input-email {
+	padding-right: 50px;
+	margin: 20px 0 68px 0;
+}
+.icon-go {
+	position: absolute;
+	top: 32px;
+	right: 16px;
+}
 /* -------------------------------------------------------*/
 footer {
 	clear: both;
@@ -121,4 +186,14 @@ footer {
 
 footer img {
 	margin: 74px 0 36px 0;
+}
+
+@media screen and (max-width: 375px) {
+	main {
+		float: none;
+		width: auto;
+	}
+	aside {
+		display: none;
+	}
 }
