--- a/05_barbershop/styles.css
+++ b/05_barbershop/styles.css
@@ -3,13 +3,13 @@
 /* common page setting */
 
 html, body {
-	margin: 0;
-	padding: 0;
+	/*margin: 0;*/
+	/*padding: 0;*/
 }
 
 ul, li {
-	margin: 0;
-	padding: 0;
+	/*margin: 0;*/
+	/*padding: 0;*/
 }
 
 /*
