--- a/05_barbershop/styles.css
+++ b/05_barbershop/styles.css
@@ -3,13 +3,56 @@
 /* common page setting */
 
 html, body {
-	/*margin: 0;*/
-	/*padding: 0;*/
+	margin: 0;
+	padding: 0;
+
+	font-family: "PT Sans Narrow";
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: bold;
+	text-transform: uppercase;
+
+	color: #ffffff;
+	background: #000000;
 }
 
+a {
+	color: #ffffff;
+	text-decoration: none;
+}
+
+.clearfix {
+	content: '';
+	display: table;
+	clear: both;
+}
+.main-menu {
+	font-size: 16px;
+	line-height: 20px;
+}
+
+.feature__item {
+	width: 300px;
+	float: left;
+	text-align: center;
+}
+.feature__item h3 {
+	font-size: 30px;
+	line-height: 42px;
+}
 ul, li {
-	/*margin: 0;*/
-	/*padding: 0;*/
+	margin: 0;
+	padding: 0;
+}
+
+.content h2 {
+	font-size: 30px;
+	line-height: 42px;
+}
+
+.box > * {
+	width: 400px;
+	float: left;
 }
 
 /*
