--- a/05_barbershop/styles.css
+++ b/05_barbershop/styles.css
@@ -6,54 +6,258 @@ html, body {
 	margin: 0;
 	padding: 0;
 
-	font-family: "PT Sans Narrow";
+	font-family: 'PT Sans Narrow', sans-serif;
 	font-size: 14px;
 	line-height: 24px;
 	font-weight: bold;
 	text-transform: uppercase;
 
-	color: #ffffff;
-	background: #000000;
+	color: white;
+	background-color: black;
+	background-image: url(img/bg.jpg);
+	background-repeat: no-repeat;
+	background-position: top center;
+}
+
+.hidden 
+{
+	position: absolute;
+	left: -10000px;
+	top: auto;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
 }
 
 a {
-	color: #ffffff;
 	text-decoration: none;
+	color: white;
 }
 
-.clearfix {
-	content: '';
-	display: table;
-	clear: both;
-}
-.main-menu {
+.main-header {
 	font-size: 16px;
-	line-height: 20px;
+	line-height:20px;
+
+	color: white;
+	background: black;
+	margin-bottom: 60px;
 }
 
-.feature__item {
-	width: 300px;
-	float: left;
+.main-menu,
+.user-menu {
+	list-style: none;
+}
+
+
+.main-menu a:hover,
+.main-menu a:focus,
+.user-menu a:hover,
+.user-menu a:focus {
+	background-color: #242424;
+}
+
+.logo {
+	margin-bottom: 80px;
+}
+.content {
+	color: white;
+}
+
+.features {
+} 
+
+.feature-list {
+	list-style: none;
 	text-align: center;
 }
 .feature__item h3 {
 	font-size: 30px;
 	line-height: 42px;
 }
-ul, li {
-	margin: 0;
-	padding: 0;
+.feature__item p {
+	width: 286px;
 }
 
-.content h2 {
-	font-size: 30px;
-	line-height: 42px;
+.btn {
+	font: inherit;
+	border: none;
+
+	color: #fff;
+	background-color: #000;
+	text-align: center;
+	padding: 12px 28px;
+	display: inline-block;
+
+	border: none;
 }
 
-.box > * {
-	width: 400px;
-	float: left;
+.btn:hover,
+.btn:focus,
+.btn:active {
+	background-color: #663d15;
 }
+
 
 /*
+ LAYOUT 
+
 */
+
+.container {
+	width: 940px;
+	padding: 0 10px;
+	margin: 0 auto;
+}
+
+.main-header {
+	display: flex;
+}
+
+main > img {
+	display: block;
+	margin: 0 auto;
+}
+
+.feature-list {
+	display: flex;
+	justify-content: space-between;
+}
+
+.feature-item {
+	width: 300px;
+}
+
+.news, .contacts {
+	width: 380px;
+}
+
+.galery, .order {
+	width: 300px;
+}
+.galery {
+	width: 286px;
+	height: 164px;
+}
+.galery-box {
+	height: 272px;
+	position: relative;
+}
+
+.galery-prev {
+	position: absolute;
+	bottom: 0;
+}
+.galery-next {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+}
+.form input {
+	font: inherit;
+
+}
+
+.form-input input {
+	font: inherit;
+	font-size: 14px;
+	/*line-height: 24px;*/
+	box-sizing: border-box;
+	width: 140px;
+	padding: 8px 16px;
+	border: 2px solid black;
+
+
+}
+
+
+
+.box {
+	display: flex;
+	justify-content: space-between;
+	padding: 52px 80px;
+
+	color: #000;
+	background-color: #f7f5f1;
+	background-image: url(img/box-bg.jpg);
+	background-repeat: no-repeat;
+
+	margin-bottom: 36px;
+}
+
+.box h2 {
+	font-size: 30px;
+	line-height: 42px;
+	margin-bottom: 30px;
+}
+
+
+.news_article span {
+	text-transform: none;
+}
+
+
+.order p {
+	margin-bottom: 22px;
+}
+order label {
+	margin-bottom: 14px;
+}
+
+form {
+	display: flex;
+	flex-flow: wrap;
+	justify-content: space-between;
+}
+form p {
+	margin-bottom: 20px: 
+}
+.form-input {
+	width: 140px;
+}
+.main-footer .container{
+	display: flex;
+}
+
+.footer-addr {
+	width: 320px;
+	margin-right: 80px;
+}
+
+.footer-addr a {
+	text-decoration: underline;
+}
+.footer-social {
+	width: 140px;
+}
+
+.footer-social ul {
+	list-style: none;
+}
+.footer-social li {
+	/*text-indent: -1000px;*/
+}
+.footer-copy {
+	width: 140px;
+	margin-left: auto;
+	text-align: center;
+}
+.footer-copy a:hover {
+	color: #000;
+	background: #fff;
+}
+
+.modal {
+	background: #fff;
+	color: #000;
+}
+
+.modal h2 {
+	font-size: 30px;
+}
+.modal-login {
+	color: #000;
+	background-color: #f8f5f2;
+	background-image: url(img/box-bg.jpg);
+	background-repeat: no-repeat;
+}
+
