--- a/06_nerds/styles.css
+++ b/06_nerds/styles.css
@@ -7,6 +7,7 @@ html, body {
 	font-size: 16px;
 	color: #283136;
 	line-height: 24px;
+	max-width: 1200px;
 }
 
 .clearfix {
@@ -15,7 +16,7 @@ html, body {
 	clear: box;
 }
 .map {
-	width: 50%;
+	/*width: 50%;*/
 }
 
 .service-item {
@@ -31,4 +32,17 @@ html, body {
 
 .main-footer li {
 	float: left;
+}
+
+.map {
+	position: relative;
+}
+
+.map img:first-child {
+	width: 100%;
+}
+.img-marker {
+	position: absolute;
+	top: 50px;
+	left: 50px;
 }
